--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "vue-horizontal-list",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "A pure vue ssr friendly horizontal list implementation.",
-
   "author": "Fuxing Loh",
   "repository": {
     "type": "git",
@@ -18,17 +17,14 @@
   ],
   "license": "MIT",
   "private": false,
-
   "main": "dist/vue-horizontal-list.ssr.js",
   "module": "dist/vue-horizontal-list.esm.js",
   "unpkg": "dist/vue-horizontal-list.min.js",
-
   "files": [
     "dist/*",
     "src/**/*.vue",
     "!src/serve-dev.*"
   ],
-
   "scripts": {
     "serve": "vue-cli-service serve src/serve-dev.js",
     "build": "cross-env NODE_ENV=production rollup --config build/rollup.config.js",
@@ -36,10 +32,7 @@
     "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es",
     "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife"
   },
-
-  "dependencies": {
-  },
-
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
@@ -52,8 +45,8 @@
     "cross-env": "^6.0.3",
     "minimist": "^1.2.0",
     "rollup": "^1.27.13",
-    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-terser": "^5.1.3",
     "rollup-plugin-vue": "5.1.1",
     "vue": "^2.6.10",
