--- a/package.json
+++ b/package.json
@@ -35,8 +35,6 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.7.7",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
     "@babel/preset-env": "^7.7.7",
     "@rollup/plugin-alias": "^2.2.0",
     "@rollup/plugin-replace": "^2.2.1",
@@ -48,7 +46,7 @@
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-terser": "^5.1.3",
-    "rollup-plugin-vue": "5.1.1",
+    "rollup-plugin-vue": "^5.1.5",
     "vue": "^2.6.10",
     "vue-template-compiler": "^2.6.10"
   },
