Renamed workflow name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   yarn:
-    name: Run yarn test
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
