--- a/.github/workflows/triage.yml
+++ b/.github/workflows/triage.yml
@@ -2,7 +2,7 @@ name: "Triage"
 
 on:
   pull_request:
-    types: [ opened, reopened ]
+    types: [ opened, reopened, ready_for_review ]
     branches: [ master ]
 
 jobs:
