--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "build:ssr": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format cjs",
     "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es",
     "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife",
+    "examples:serve": "vue-cli-service serve examples/serve.js",
+    "examples:build": "vue-cli-service build examples/serve.js",
     "prepublishOnly": "yarn build",
     "prettier:format": "prettier --write .",
     "prettier:check": "prettier --check ."
@@ -48,8 +50,10 @@
     "@vue/cli-plugin-babel": "^4.3.1",
     "@vue/cli-service": "^4.3.1",
     "cross-env": "^7.0.2",
+    "husky": "^4.3.0",
     "minimist": "^1.2.5",
     "prettier": "^2.1.2",
+    "pretty-quick": "^3.1.0",
     "rollup": "^2.7.3",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-terser": "^5.3.0",
@@ -62,5 +66,10 @@
   },
   "engines": {
     "node": ">=10"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
