--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,9 +21,10 @@ jobs:
 
       - run: yarn run examples:build
 
-      - run: |
-          git init
-          git add -A
-          git commit -m 'deploy gh-pages'
-          git push -f git@github.com:${{ github.repository }}.git master:gh-pages
-        working-directory: gh-pages
+      - name: Deploy 🚀
+          uses: JamesIves/github-pages-deploy-action@3.7.1
+          with:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            BRANCH: gh-pages
+            FOLDER: gh-pages
+            CLEAN: true
