--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "vue-horizontal-list",
-  "version": "1.1.0",
+  "name": "vue3-horizontal-list",
+  "version": "1.0.0",
   "description": "A pure vue ssr friendly horizontal list implementation.",
   "author": "Fuxing Loh",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fuxingloh/vue-horizontal-list.git"
+    "url": "https://github.com/fuxingloh/vue3-horizontal-list.git"
   },
-  "bugs": "https://github.com/fuxingloh/vue-horizontal-list/issues",
+  "bugs": "https://github.com/fuxingloh/vue3-horizontal-list/issues",
   "keywords": [
     "vue",
     "vuejs",
@@ -17,10 +17,10 @@
   ],
   "license": "MIT",
   "private": false,
-  "main": "dist/vue-horizontal-list.ssr.js",
-  "browser": "dist/vue-horizontal-list.esm.js",
-  "module": "dist/vue-horizontal-list.esm.js",
-  "unpkg": "dist/vue-horizontal-list.min.js",
+  "main": "dist/vue3-horizontal-list.ssr.js",
+  "browser": "dist/vue3-horizontal-list.esm.js",
+  "module": "dist/vue3-horizontal-list.esm.js",
+  "unpkg": "dist/vue3-horizontal-list.min.js",
   "files": [
     "dist/*",
     "src/**/*.vue"
@@ -43,26 +43,26 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
-    "@rollup/plugin-alias": "^2.2.0",
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-node-resolve": "^8.4.0",
-    "@rollup/plugin-replace": "^2.3.2",
-    "@vue/cli-plugin-babel": "^4.3.1",
-    "@vue/cli-service": "^4.3.1",
+    "@rollup/plugin-alias": "^3.1.9",
+    "@rollup/plugin-commonjs": "^21.1.0",
+    "@rollup/plugin-node-resolve": "^13.2.1",
+    "@rollup/plugin-replace": "^4.0.0",
+    "@vue/cli-plugin-babel": "^5.0.4",
+    "@vue/cli-service": "^5.0.4",
     "cross-env": "^7.0.2",
-    "husky": "^4.3.0",
+    "husky": "^7.0.4",
     "minimist": "^1.2.5",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.1.0",
-    "rollup": "^2.7.3",
+    "rollup": "^2.70.2",
     "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-terser": "^5.3.0",
-    "rollup-plugin-vue": "^5.1.6",
-    "vue": "^2.6.11",
-    "vue-template-compiler": "^2.6.11"
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "^6.0.0",
+    "vue": "^3.2.33",
+    "vue-template-compiler": "^2.6.14"
   },
   "peerDependencies": {
-    "vue": "^2.6.11"
+    "vue": "^3.2.33"
   },
   "engines": {
     "node": ">=10"
