--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "vue3-horizontal-list",
-  "version": "1.0.0",
-  "description": "A pure vue ssr friendly horizontal list implementation.",
-  "author": "Fuxing Loh",
+  "version": "0.0.1",
+  "description": "A pure vue3 ssr friendly horizontal list implementation.",
+  "author": "octopus_zy",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fuxingloh/vue3-horizontal-list.git"
+    "url": "https://github.com/DaQinShgy/vue3-horizontal-list.git"
   },
-  "bugs": "https://github.com/fuxingloh/vue3-horizontal-list/issues",
+  "bugs": "https://github.com/DaQinShgy/vue3-horizontal-list/issues",
   "keywords": [
     "vue",
     "vuejs",
@@ -17,52 +17,52 @@
   ],
   "license": "MIT",
   "private": false,
-  "main": "dist/vue3-horizontal-list.ssr.js",
-  "browser": "dist/vue3-horizontal-list.esm.js",
-  "module": "dist/vue3-horizontal-list.esm.js",
-  "unpkg": "dist/vue3-horizontal-list.min.js",
+  "main": "dist/vue3-horizontal-list.umd.min.js",
   "files": [
     "dist/*",
-    "src/**/*.vue"
+    "src/*.vue"
   ],
   "scripts": {
     "serve": "vue-cli-service serve examples/serve.js",
-    "build": "cross-env NODE_ENV=production rollup --config build/rollup.config.js",
-    "build:ssr": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format cjs",
-    "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es",
-    "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife",
-    "examples:serve": "vue-cli-service serve examples/serve.js",
-    "examples:build": "vue-cli-service build examples/serve.js",
-    "prepublishOnly": "yarn build",
-    "prettier:format": "prettier --write .",
-    "prettier:check": "prettier --check ."
+    "build": "vue-cli-service build --target lib --dest dist src/index.js",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "smoothscroll-polyfill": "^0.4.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@rollup/plugin-alias": "^3.1.9",
-    "@rollup/plugin-commonjs": "^21.1.0",
-    "@rollup/plugin-node-resolve": "^13.2.1",
-    "@rollup/plugin-replace": "^4.0.0",
-    "@vue/cli-plugin-babel": "^5.0.4",
-    "@vue/cli-service": "^5.0.4",
-    "cross-env": "^7.0.2",
-    "husky": "^7.0.4",
-    "minimist": "^1.2.5",
-    "prettier": "^2.1.2",
-    "pretty-quick": "^3.1.0",
-    "rollup": "^2.70.2",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-vue": "^6.0.0",
-    "vue": "^3.2.33",
-    "vue-template-compiler": "^2.6.14"
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "core-js": "^3.8.3",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "vue": "^3.2.13"
   },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "@babel/eslint-parser"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead",
+    "not ie 11"
+  ],
   "peerDependencies": {
-    "vue": "^3.2.33"
+    "vue": "^3.2.13"
   },
   "engines": {
     "node": ">=10"
